Fix vertical align of icon

--- a/client/css/styles.less
+++ b/client/css/styles.less
@@ -507,7 +507,7 @@ input[type="text"] {
 }
 
 .git-icon {
-    vertical-align: -5%;
+    vertical-align: -5% important!;
 }
 
 .btn-continue {
